--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".HomeActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +18,14 @@
         </activity>
         <activity
             android:name=".ListeStationActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".ListeRelevesActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".DetailStationActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
